fix: wrong background flash

--- a/src/styles/app.pcss
+++ b/src/styles/app.pcss
@@ -21,7 +21,7 @@ html {
   opacity: 1; */
   overflow-x: hidden;
   overflow-y: hidden;
-  background-color: $bg-dark;
+  background-color: #1f1f25;
 }
 
 body {
